header, space, buttons animation

--- a/index.html
+++ b/index.html
@@ -10,9 +10,24 @@
     <header>
         <nav>
             <ul class="nav-right-section">
-                <li><a href="">Gmail</a></li>
-                <li><a href="#">Images</a></li>
-                <li><a href="#">Fotos</a></li>
+                <li>
+                    <a href="">Gmail</a>
+                </li>
+                <li>
+                    <a href="">Images</a>
+                </li>
+                <li class="search-labs">
+                    <a href=""></a>
+                </li>
+                <li class="menu-icon">
+                    <a href=""></a>
+                </li>
+                <li class="sign-in-button">
+                    <a href="">
+                        <img src="https://lh3.googleusercontent.com/a/ACg8ocI-9F-frrtNyd9cGD53UADfmnN6OJAXF1Puuc8wIlJTH46H8Q4s=s83-c-mo" alt="">
+                    </a>
+                </li>
+            </ul>
         </nav>
     </header>
     
