Main and footer html additions and css style + google searching implementation

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         <nav>
             <ul class="nav-right-section">
                 <li>
-                    <a href="">Gmail</a>
+                    <a href="https://mail.google.com/" class="gmail">Gmail</a>
                 </li>
                 <li>
-                    <a href="">Images</a>
+                    <a href="https://www.google.com/imghp?hl=en&tab=ri&authuser=0&ogbl" class="images-text">Images</a>
                 </li>
                 <li class="search-labs">
                     <a href=""></a>
@@ -30,6 +30,56 @@
             </ul>
         </nav>
     </header>
-    
+    <main>  
+        <section class="logo-section">
+            <img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png" alt="Google Logo">
+        </section>
+        <form action="https://google.com/search">
+
+            <section class="search-section">
+                <div class="search-box">
+                    <span class="search-icon">
+                    </span>
+                    <input type="text" placeholder="Search Google or type an URL" name="q"  autocomplete="off" autofocus>
+                    <a class="micro-icon" title="Search by voice"></a>
+                    <a class="images-icon" title="Search by image" href=""></a>
+                </div>
+            </section>
+        </form>
+        
+        <section class="buttons-section">
+            <a href="https://github.com/john3010gg" class="shortcut">
+                <img src="assets/github.jpg" alt="Github">
+                <span>Github</span>
+            </a>
+            <a href="https://www.youtube.com/" class="shortcut">
+                <img src="assets/YoutubeLogo.webp" alt="YouTube">
+                <span>YouTube</span>
+            </a>
+            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&list=RDdQw4w9WgXcQ&start_radio=1&ab_channel=RickAstley" class="shortcut">
+                <img src="assets/question_mark_24dp_434746_FILL0_wght400_GRAD0_opsz24.png" alt="?">
+                <span>?</span>
+            </a>
+            <a href="#" class="shortcut">
+                <img src="assets/micro.png" alt="Microsoft">
+                <span>Microsoft</span>
+            </a>
+            <a href="#" class="shortcut">
+                <img src="assets/ama.jpg" alt="Amazon">
+                <span>Amazon</span>
+            </a>
+            <a href="#" class="shortcut">
+                <img src="assets/add_24dp_434746_FILL0_wght400_GRAD0_opsz24.png" alt="Direct Access">
+                <span>Add Shortcut</span>
+            </a>
+        </section>
+    </main>
+
+    <footer>
+        <a href="#" class="customize-button">
+            <span class="pencil"></span>
+            <span class="button-text">Customize Chrome</span>
+        </a>
+    </footer>
 </body>
 </html>
